-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.16.0
-
None
-
3
-
9223372036854775807
Given the following parms:
jobid_name=%j@%u@%h jobid_var=SLURM_JOB_ID
And a job that does not have SLURM_JOB_ID set, it can product a job stats name along the lines of "@4089401@host1". This will be printed unquoted by the current job_stats code. This is incorrect according to the YAML spec: https://yaml.org/spec/1.2.2/#rule-c-reserved
- is related to
-
LU-15826 jobstats output can produce invalid yaml ( part 2 )
-
- Resolved
-